--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+---
+layout: default
+title: Tiago Belintani
+---
+
 <style>
-  /* Fontes modernas tech + suaves */
+  /* Fontes modernas, suaves e com estilo tech */
   @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Space+Grotesk:wght@500;700&display=swap');
 
   body {
@@ -115,4 +120,61 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
   }
 </style>
+
+<h1>Tiago Belintani</h1>
+<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
+
+<div class="photo">
+  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
+</div>
+
+<p class="white-box">
+  Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
+  I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
+  My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
+</p>
+
+<div class="section">
+  <h2>🧬 Work</h2>
+  <ul>
+    <li>Researcher in Evolutionary Biology</li>
+    <li>Bioinformatician for Transcriptomic and Phylogenomic Projects</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>🎓 Education</h2>
+  <ul>
+    <li>Universidade Estadual de Campinas – IB/Unicamp</li>
+    <li>Faculdade de Ciências Farmacêuticas – FCFAR/Unesp</li>
+    <li>University of Idaho – UIDAHO</li>
+    <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>📬 Contact Me</h2>
+  <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
+  <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
+</div>
+
+<div class="section">
+  <h2>📄 Academic Profiles</h2>
+  <ul>
+    <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR">Google Scholar</a></li>
+    <li><a href="https://www.researchgate.net/profile/Tiago-Belintani?ev=hdr_xprf">ResearchGate</a></li>
+    <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
+  </ul>
+</div>
+
+<div class="cv-link">
+  <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
+    <img src="assets/images/3846805.png" alt="CV icon">Access My CV
+  </a>
+</div>
+
+<div class="image-gallery">
+  <img src="assets/images/imagem1.jpg" alt="DNA theme">
+  <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
+</div>
 
