--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ title: Tiago Belintani
 </style>
 
 <h1>Tiago Belintani</h1>
-<h3>Researcher |</h3>
-<h3>Postdoctoral Fellow |</h3>
-<h3>Evolutionary Scientist – Brazil</h3>
+<h3>Researcher |
+Postdoctoral Fellow |
+Evolutionary Scientist – Brazil</h3>
 
 <div class="photo">
   <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
