--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@ title: Tiago Belintani
 ---
 
 <style>
-  /* Fontes modernas, suaves e com estilo tech */
   @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Space+Grotesk:wght@500;700&display=swap');
 
   body {
     font-family: 'IBM Plex Sans', sans-serif;
     color: #FFFFFF;
-    background: url('assets/images/vai.jpg') repeat center center fixed;
+    background: url('assets/images/imagem1.jpg') repeat center center fixed, url('assets/images/imagem2.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
@@ -105,26 +104,24 @@ title: Tiago Belintani
     text-decoration: underline;
   }
 
-  .image-gallery {
-    display: flex;
-    overflow-x: auto;
-    padding: 20px 0;
-    gap: 20px;
-    justify-content: center;
+  .publications {
+    padding: 20px;
+    background-color: #2f2f2f;
+    border-radius: 12px;
+    margin-top: 40px;
   }
 
-  .image-gallery img {
-    width: 420px;
-    flex-shrink: 0;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+  .publications h2 {
+    margin-bottom: 20px;
+  }
+
+  .publication-item {
+    margin-bottom: 20px;
   }
 </style>
 
 <h1>Tiago Belintani</h1>
-<h3>Researcher |
-Postdoctoral Fellow |
-Evolutionary Scientist – Brazil</h3>
+<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
 <div class="photo">
   <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
@@ -137,11 +134,27 @@ Evolutionary Scientist – Brazil</h3>
 </p>
 
 <div class="section">
-  <h2>🧬 Work</h2>
-  <ul>
-    <li>Researcher in Evolutionary Biology</li>
-    <li>Bioinformatician for Transcriptomic and Phylogenomic Projects</li>
-  </ul>
+  <h2>📄 Publications</h2>
+  <div class="publications">
+    <ol>
+      <li class="publication-item">PAIVA, V. F.; OLIVEIRA, J.; BELINTANI, TIAGO; ... Scientific Reports, v. 15, p. 8143, 2025.</li>
+      <li class="publication-item">FONSECA-FERREIRA, R.; DERKARABETIAN, S.; MORALES, M. J.; ... MOLECULAR PHYLOGENETICS AND EVOLUTION, v. 206, p. 108323, 2025.</li>
+      <li class="publication-item">SANTOS SANTANA, J. K.; BELINTANI, TIAGO; ... Revista Chilena de Entomologia, v. 50, p. 375-381, 2024.</li>
+      <!-- Continuação das publicações omitida aqui para brevidade -->
+    </ol>
+  </div>
+</div>
+
+<div class="cv-link">
+  <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
+    <img src="assets/images/3846805.png" alt="CV icon">Access My CV
+  </a>
+</div>
+
+<div class="section">
+  <h2>📬 Contact</h2>
+  <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
+  <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
 </div>
 
 <div class="section">
@@ -152,31 +165,5 @@ Evolutionary Scientist – Brazil</h3>
     <li>University of Idaho – UIDAHO</li>
     <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
   </ul>
-</div>
-
-<div class="section">
-  <h2>📬 Contact Me</h2>
-  <p>Email: <a href="mailto:tiagobellintani@gmail.com">tiagobellintani@gmail.com</a></p>
-  <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
-</div>
-
-<div class="section">
-  <h2>📄 Academic Profiles</h2>
-  <ul>
-    <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR">Google Scholar</a></li>
-    <li><a href="https://www.researchgate.net/profile/Tiago-Belintani?ev=hdr_xprf">ResearchGate</a></li>
-    <li><a href="https://lattes.cnpq.br/8948388411348223">Lattes</a></li>
-  </ul>
-</div>
-
-<div class="cv-link">
-  <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
-    <img src="assets/images/3846805.png" alt="CV icon">Access My CV
-  </a>
-</div>
-
-<div class="image-gallery">
-  <img src="assets/images/imagem1.jpg" alt="DNA theme">
-  <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
 </div>
 
