--- a/index.html
+++ b/index.html
@@ -1,166 +1,34 @@
----
-layout: default
-title: Tiago Belintani
----
-
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&family=Space+Grotesk:wght@500;700&display=swap');
-
-  body {
-    font-family: 'IBM Plex Sans', sans-serif;
-    color: #FFFFFF;
-    background-color: #191919;
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 30px;
-  }
-
-  h1, h2, h3 {
-    text-align: center;
-    color: #FFFFFF;
-    font-family: 'Space Grotesk', sans-serif;
-    letter-spacing: 0.5px;
-  }
-
-  h1 {
-    font-size: 3em;
-    margin-bottom: 0.2em;
-    padding: 10px;
-    background-color: #2f2f2f;
-    border-radius: 12px;
-  }
-
-  h3 {
-    font-size: 1.7em;
-    font-weight: 500;
-    margin-top: 0;
-    padding: 6px;
-    background-color: #2f2f2f;
-    border-radius: 8px;
-  }
-
-  p, li {
-    font-size: 1.05em;
-    line-height: 1.8em;
-    color: #FFFFFF;
-  }
-
-  .section {
-    background-color: #2f2f2f;
-    padding: 25px;
-    margin: 30px 0;
-    border-radius: 12px;
-  }
-
-  .white-box {
-    background-color: #2f2f2f;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px 0;
-  }
-
-  .cv-link {
-    background-color: #2f2f2f;
-    text-align: center;
-    padding: 30px;
-    margin: 50px 0;
-    border-radius: 12px;
-  }
-
-  .cv-link a {
-    font-size: 1.2em;
-    color: #FFFFFF;
-    text-decoration: none;
-    font-weight: 600;
-  }
-
-  .cv-link img {
-    width: 48px;
-    vertical-align: middle;
-    margin-right: 12px;
-  }
-
-  .photo {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-
-  .photo img {
-    width: 320px;
-    border: none;
-    border-radius: 6px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  }
-
-  a {
-    color: #FFD700;
-    text-decoration: none;
-    font-weight: 600;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-
-  .publications {
-    padding: 20px;
-    background-color: #2f2f2f;
-    border-radius: 12px;
-    margin-top: 40px;
-  }
-
-  .publications h2 {
-    margin-bottom: 20px;
-  }
-
-  .publication-item {
-    margin-bottom: 20px;
-  }
-
-  .image-gallery {
-    display: flex;
-    overflow-x: auto;
-    padding: 20px 0;
-    gap: 20px;
-    justify-content: center;
-  }
-
-  .image-gallery img {
-    width: 420px;
-    flex-shrink: 0;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
-  }
-</style>
-
-<!-- Galeria de imagens no topo -->
-<div class="image-gallery">
-  <img src="assets/images/imagem1.jpg" alt="DNA theme">
-  <img src="assets/images/imagem2.jpg" alt="Tarantula and Kissing Bug">
-</div>
-
-<h1>Tiago Belintani</h1>
-<h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
-
-<div class="photo">
-  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
-</div>
-
-<p class="white-box">
-  Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
-  I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
-  My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
-</p>
-
 <div class="section">
   <h2>📄 Publications</h2>
+  <div class="photo">
+    <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
+  </div>
   <div class="publications">
     <ol>
-      <li class="publication-item">PAIVA, V. F.; OLIVEIRA, J.; BELINTANI, TIAGO; ... Scientific Reports, v. 15, p. 8143, 2025.</li>
-      <li class="publication-item">FONSECA-FERREIRA, R.; DERKARABETIAN, S.; MORALES, M. J.; ... MOLECULAR PHYLOGENETICS AND EVOLUTION, v. 206, p. 108323, 2025.</li>
-      <li class="publication-item">SANTOS SANTANA, J. K.; BELINTANI, TIAGO; ... Revista Chilena de Entomologia, v. 50, p. 375-381, 2024.</li>
+      <li class="publication-item">PAIVA, V. F. ; OLIVEIRA, J. ; BELINTANI, TIAGO ; GALVÃO, CLEBER ; GIL-SANTANA, H. ; ROSA, JOÃO ARISTEU DA . Hospesneotomae n. gen. of the Triatomini tribe presents a turnaround in the taxonomy of the Triatoma protracta species complex. Scientific Reports, v. 15, p. 8143, 2025.</li>
+      <li class="publication-item">FONSECA-FERREIRA, R. ; DERKARABETIAN, S. ; MORALES, M. J. ; OPATOVA, V. ; BELINTANI, TIAGO ; LYLE, R. ; GUADANUCCI, J. P. L. . Disconnecting trapdoors: Phylogenomic analyses reveal evolutionary contrasts in trapdoor spiders with intercontinental distribution (Idiopidae, Idiopinae). MOLECULAR PHYLOGENETICS AND EVOLUTION, v. 206, p. 108323, 2025.</li>
+      <li class="publication-item">SANTOS SANTANA, JOCIEL KLLEYTON ; BELINTANI, TIAGO ; ARISTEU DA ROSA, JOÃO ; DE OLIVEIRA, JADER . Presence of Rhodnius neglectus Lent, 1954 (Hemiptera: Reduviidae: Triatominae) in Araraquara, São Paulo, Brazil: signals the importance of surveillance for the municipality. Revista Chilena de Entomologia, v. 50, p. 375-381, 2024.</li>
+      <li class="publication-item">BELINTANI, TIAGO; OLIVEIRA, JADER DE ; PAIVA, VINÍCIUS FERNANDES DE ; SANTANA, JOCIEL KLLEYTON SANTOS ; FERNANDES, ISABELLA MAXWELL PAULINO ; GOMES, JONATHAN SILVESTRE ; HOPPE, ESTEVAM GUILHERME LUX ; ROSA, JOÃO ARISTEU DA . Triatomines in the city: A study of Rhodnius neglectus in Jaboticabal, São Paulo, Brazil, and its epidemiological implications. Revista da Sociedade Brasileira de Medicina Tropical, v. 57, p. e00422-2024-11, 2024.</li>
+      <li class="publication-item">PEIXOTO, S. ; BELINTANI, T. ; ROCHA, D. ; FONTES, F. ; GALVÃO, CLEBER . Characterization of Triatoma infestans (Klug, 1834) (Hemiptera: Heteroptera, Reduviidae) from Residual Foci in the States of Bahia and Rio Grande do Sul, Brazil, Using Geometric Morphology. INSECTS, v. 14, p. 325, 2023.</li>
+      <li class="publication-item">BELINTANI, T.; CONGRAINS, C. ; PINOTTI, HELOISA ; CHAHAD-EHLERS, S. ; BRITO, R. A. ; OLIVEIRA, J. ; FRIAS-LASSERRE, D. ; FONTES, F. M. ; ROSA, J. A. . Transcriptome-based phylogenomic analysis reveals evidence of ancient hybridization events in the Mepraia genus (Hemiptera: Reduviidae: Triatominae). FRONTIERS IN ECOLOGY AND EVOLUTION, v. 11, p. 1-1, 2023.</li>
+      <li class="publication-item">KUNII, G. K. W ; FALCONE, R. ; GRAMINHA, M. A. S. ; NASCIMENTO, J. D. ; BELINTANI, T. ; OLIVEIRA, J. ; CLEMENTINO, L. C. ; ROSA, J. A. . Growth Curve, Morphological and Molecular Characterization of Two Strains of Trypanosoma cruzi (Kinetoplastida, Trypanosomatidae) isolated from Triatoma sherlocki (Hemiptera, Reduviidae, Triatominae). SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 55, p. 55:e05212021, 2022.</li>
+      <li class="publication-item">CACINI, G. L. ; OLIVEIRA, J. ; BELINTANI, T. ; SOUZA, E. ; OLAIA, N. ; PINTO, M. C. ; ROSA, J. A. . Immature instars of three species of Rhodnius Stål, 1859 (Hemiptera, Reduviidae, Triatominae): morphology, morphometry and taxonomic implications. Parasites & Vectors, v. 1, p. 1-16, 2022.</li>
+      <li class="publication-item">BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; ROSA, J. A. . New in morphometry: geometric morphometry of the external female genitalia of Triatominae (Hemiptera: Reduviidae). ACTA TROPICA, v. 1, p. 106383, 2022.</li>
+      <li class="publication-item">SILVA, L. A. ; BELINTANI, T. ; PAIVA, V. F. ; NASCIMENTO, JULIANA DAMIELI ; Rimoldi, A ; GARDIM, S. ; MELLO, F. ; OBARA, M. ; OLIVEIRA, J. ; ROSA, J. A. . Integrative taxonomy and phylogenetic systematics of the Triatoma rubrovaria subcomplex (Hemiptera, Triatominae). ACTA TROPICA, v. -, p. 106699, 2022.</li>
+      <li class="publication-item">KAWASIMA, E. S. ; PAIVA, V. F. ; BELINTANI, T. ; H.H.G, J. ; PINOTTI, HELOISA ; OLIVEIRA, J. ; ROSA, J. A. . Morphological studies of Cimex lectularius Linnaeus, 1758 (Hemiptera: Cimicidae). Revista Chilena de Entomologia, v. 48, p. 695-705, 2022.</li>
+      <li class="publication-item">PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, JADER ; GALVÃO, CLÉBER ; ROSA, J. A. . A review of the taxonomy and biology of Triatominae subspecies (Hemiptera: Reduviidae). PARASITOLOGY RESEARCH, v. 1, p. 1, 2022.</li>
+      <li class="publication-item">BELINTANI, TIAGO; OLIVEIRA, JADER ; PINOTTI, HELOISA ; ALEVI, KAIO CESAR CHABOLI ; NASCIMENTO, JULIANA DAMIELI ; SASSO-CERRI, ESTELA ; GALVÃO, CLEBER ; ARISTEU DA ROSA, JOÃO . Characterization of Female External Genitalia and Eggs of Four South American Species of the Triatoma Laporte, 1832 Genus (Hemiptera: Reduviidae: Triatominae). INSECTS, v. 12, p. 537, 2021.</li>
+      <li class="publication-item">BELINTANI, T.; PAIVA, V. F. ; OLIVEIRA, J. ; GIL-SANTANA, H. ; ARISTEU DA ROSA, JOÃO . Wings or hemelytra? brief considerations on terminology in studies with Triatominae (Hemiptera: Heteroptera: Reduviidae).. Revista Chilena de Entomologia, v. 4, p. 669-672, 2021.</li>
+      <li class="publication-item">ROSSETO, L. ; PAIVA, V. F. ; BELINTANI, T. ; OLIVEIRA, J. ; MENDONCA, V. J. ; ROSA, JOÃO ARISTEU DA . Checklist and phenetics studies of nymphs of two species of triatomines: Triatoma lenti Sherlock & Serafim, 1967 and Triatoma sherlocki Papa, Jurberg, Carcavallo, Cerqueira, Barata, 2002 (Hemiptera: Reduviidae: Triatominae). SOCIEDADE BRASILEIRA DE MEDICINA TROPICAL. REVISTA, v. 54, p. ---, 2021.</li>
+      <li class="publication-item">BELINTANI, TIAGO; OLIVEIRA, JADER ; PINOTTI, HELOISA ; SILVA, LUCAS ABRANTES ; ALEVI, KAIO CESAR CHABOLI ; GALVÃO, CLÉBER ; ROSA, JOÃO ARISTEU DA . Phylogenetic and phenotypic relationships of the Triatoma sordida subcomplex (Hemiptera: Reduviidae: Triatominae). ACTA TROPICA, v. 212, p. 105679, 2020.</li>
+      <li class="publication-item">BILHEIRO, ADRIANA BENATTI ; DA ROSA, JOÃO ARISTEU ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; FONTES, GILBERTO ; MEDEIROS, JANSEN FERNANDES ; JÚNIOR, ANTÔNIO MARQUES PEREIRA ; MENEGUETTI, DIONATAS ULISES DE OLIVEIRA ; CAMARGO, LUÍS MARCELO ARANHA . Biological Aspects of (Hemiptera, Reduviidae, Triatominae) Under Laboratory Conditions. VECTOR-BORNE AND ZOONOTIC DISEASES, v. 1, p. vbz.2019.2449, 2019.</li>
+      <li class="publication-item">ALEVI, KAIO CESAR CHABOLI ; AUGUSTO, YURI ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; DA SILVA, LUCAS ABRANTES ; DA ROSA, JOÃO ARISTEU ; DE AZEREDO OLIVEIRA, MARIA TERCÍLIA VILELA . Reproductive aspects of Chagas disease vectors (Hemiptera, Triatominae) with anatomical teratologies. ACTA TROPICA, v. 185, p. 251-254, 2018.</li>
+      <li class="publication-item">BILHEIRO, ADRIANA BENATTI ; DA ROSA, JOÃO ARISTEU ; DE OLIVEIRA, JADER ; BELINTANI, TIAGO ; FONTES, GILBERTO ; MEDEIROS, JANSEN FERNANDES ; MENEGUETTI, DIONATAS ULISES DE OLIVEIRA ; CAMARGO, LUÍS MARCELO ARANHA . First Report of Natural Infection with Trypanosoma cruzi in Rhodnius montenegrensis (Hemiptera, Reduviidae, Triatominae) in Western Amazon, Brazil. VECTOR BORNE AND ZOONOTIC DISEASES (ONLINE), v. 20, p. 1, 2018.</li>
+      <li class="publication-item">OLIVEIRA, JADER ; MARCET, PAULA L. ; TAKIYA, DANIELA M. ; MENDONÇA, VAGNER J. ; BELINTANI, TIAGO ; BARGUES, MARIA D. ; MATEO, LUCIA ; CHAGAS, VIVIAN ; FOLLY-RAMOS, ELAINE ; CORDEIRO-ESTRELA, PEDRO ; GURGEL-GONÇALVES, RODRIGO ; COSTA, JANE ; DA ROSA, JOÃO A. ; ALMEIDA, CARLOS E. . Combined phylogenetic and morphometric information to delimit and unify the Triatoma brasiliensis species complex and the Brasiliensis subcomplex. ACTA TROPICA, v. 170, p. 140-148, 2017.</li>
+      <li class="publication-item">DA ROSA, JOÃO ARISTEU ; SOUZA, EDER SANTOS ; DA COSTA TEIXEIRA, ADELSON ; BARBOSA, ROSENILDO RIBEIRO ; DE SOUZA, AECILDO JOSÉ ; BELINTANI, TIAGO ; NASCIMENTO, JULIANA DAMIELI ; GIL-SANTANA, HÉLCIO REINALDO ; DE OLIVEIRA, JADER . Third record of Rhodnius amazonicus and comparative study with R. pictipes (Hemiptera, Reduviidae, Triatominae). ACTA TROPICA, v. 176, p. 364-372, 2017.</li>
     </ol>
   </div>
+</div>
 </div>
 
 <div class="cv-link">
@@ -184,3 +52,4 @@ title: Tiago Belintani
     <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
   </ul>
 </div>
+
