--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ title: Tiago Belintani
   body {
     font-family: 'IBM Plex Sans', sans-serif;
     color: #FFFFFF;
-    background-color: #191919;
+    background: url('assets/images/vai.jpg') repeat center center fixed;
+    background-size: cover;
     max-width: 960px;
     margin: 0 auto;
     padding: 30px;
@@ -50,6 +51,7 @@ title: Tiago Belintani
     padding: 25px;
     margin: 30px 0;
     border-radius: 12px;
+    border: none;
   }
 
   .white-box {
@@ -57,6 +59,7 @@ title: Tiago Belintani
     padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
+    border: none;
   }
 
   .cv-link {
@@ -65,6 +68,7 @@ title: Tiago Belintani
     padding: 30px;
     margin: 50px 0;
     border-radius: 12px;
+    border: none;
   }
 
   .cv-link a {
@@ -127,7 +131,7 @@ title: Tiago Belintani
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<p class="white-box">
+<p class="white-box" style="text-align: justify;">
   Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
   I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
   My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
