--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Tiago Belintani
 
   body {
     font-family: 'IBM Plex Sans', sans-serif;
-    color: #FFFFFF;
-    background: url('assets/images/vai.jpg') repeat center center fixed;
+    color: #cccccc;
+    background: #121212;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
@@ -18,7 +18,7 @@ title: Tiago Belintani
 
   h1, h2, h3 {
     text-align: center;
-    color: #FFFFFF;
+    color: #cccccc;
     font-family: 'Space Grotesk', sans-serif;
     letter-spacing: 0.5px;
   }
@@ -27,7 +27,7 @@ title: Tiago Belintani
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 10px;
-    background-color: #2f2f2f;
+    background-color: #1a1a1a;
     border-radius: 12px;
   }
 
@@ -36,18 +36,18 @@ title: Tiago Belintani
     font-weight: 500;
     margin-top: 0;
     padding: 6px;
-    background-color: #2f2f2f;
+    background-color: #1a1a1a;
     border-radius: 8px;
   }
 
   p, li {
     font-size: 1.05em;
     line-height: 1.8em;
-    color: #FFFFFF;
+    color: #cccccc;
   }
 
   .section {
-    background-color: #2f2f2f;
+    background-color: #1a1a1a;
     padding: 25px;
     margin: 30px 0;
     border-radius: 12px;
@@ -55,7 +55,7 @@ title: Tiago Belintani
   }
 
   .white-box {
-    background-color: #2f2f2f;
+    background-color: #1a1a1a;
     padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
@@ -63,7 +63,7 @@ title: Tiago Belintani
   }
 
   .cv-link {
-    background-color: #2f2f2f;
+    background-color: #1a1a1a;
     text-align: center;
     padding: 30px;
     margin: 50px 0;
@@ -73,7 +73,7 @@ title: Tiago Belintani
 
   .cv-link a {
     font-size: 1.2em;
-    color: #FFFFFF;
+    color: #cccccc;
     text-decoration: none;
     font-weight: 600;
   }
@@ -97,7 +97,7 @@ title: Tiago Belintani
   }
 
   a {
-    color: #FFD700;
+    color: #999999;
     text-decoration: none;
     font-weight: 600;
   }
@@ -167,3 +167,5 @@ title: Tiago Belintani
     <li>São Paulo State University (Unesp) – Campus de Rio Claro</li>
   </ul>
 </div>
+
+ 
