--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tiago Belintani
   body {
     font-family: 'IBM Plex Sans', sans-serif;
     color: #cccccc;
-    background: #121212;
+    background: url('assets/images/vai.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
@@ -142,8 +142,14 @@ title: Tiago Belintani
 </div>
 
 <div class="section">
-  <h2>📄 Publications</h2>
-  <p>You can find my full list of publications on <a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a>.</p>
+  <h2>📄 Academic Profiles</h2>
+  <ul>
+    <li><a href="https://scholar.google.com/citations?user=Ah8QjuIAAAAJ&hl=pt-BR" target="_blank">Google Scholar</a></li>
+    <li><a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a></li>
+    <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
+    <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
+  </ul>
+</div>
 </div>
 
 <div class="cv-link">
@@ -168,4 +174,3 @@ title: Tiago Belintani
   </ul>
 </div>
 
- 
