--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@ title: Tiago Belintani
     <li><a href="https://bv.fapesp.br/pt/pesquisador/728865/tiago-belintani/" target="_blank">FAPESP</a></li>
     <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
     <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
+    <li><a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a></li>
+   <li><a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ReserachID</a></li>
   </ul>
 </div>
 </div>
