--- a/index.html
+++ b/index.html
@@ -176,3 +176,7 @@ title: Tiago Belintani
   </ul>
 </div>
 
+<!-- Imagem final no rodapé -->
+<div class="photo">
+  <img src="assets/images/test.jpg" alt="Final Illustration">
+</div>
