--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tiago Belintani
   body {
     font-family: 'IBM Plex Sans', sans-serif;
     color: #cccccc;
-    background: url('assets/images/vai.jpg') repeat center center fixed;
+    background: url('assets/images/vaii.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
@@ -178,5 +178,5 @@ title: Tiago Belintani
 
 <!-- Imagem final no rodapé -->
 <div class="photo">
-  <img src="assets/images/test.jpg" alt="Final Illustration">
+  <img src="assets/images/imagem_faixa.jpg" alt="Final Illustration">
 </div>
