--- a/index.html
+++ b/index.html
@@ -178,5 +178,5 @@ title: Tiago Belintani
 
 <!-- Imagem final no rodapé -->
 <div class="photo">
-  <img src="assets/images/imagem_faixa.jpg" alt="Final Illustration">
+  <img src="assets/images/imagem_faixa.png" alt="Final Illustration">
 </div>
