--- a/index.html
+++ b/index.html
@@ -178,5 +178,10 @@ title: Tiago Belintani
 
 <!-- Imagem final no rodapé -->
 <div class="photo">
-  <img src="assets/images/imagem_faixa.png" alt="Final Illustration">
+  <img src="assets/images/imagem_faixa.png" alt="Final Illustration" style="width: 100%; border-radius: 12px;">
+</div>
+
+<!-- Imagem final no rodapé -->
+<div class="section" style="text-align: center; padding: 0;">
+  <img src="assets/images/test.jpg" alt="Final Illustration" style="width: 100%; border-radius: 12px;">
 </div>
