--- a/index.html
+++ b/index.html
@@ -137,10 +137,6 @@ title: Tiago Belintani
   My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
 </p>
 
-<div class="photo">
-  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
-</div>
-
 <div class="section">
   <h2>📄 Academic Profiles</h2>
   <ul>
@@ -176,12 +172,13 @@ title: Tiago Belintani
   </ul>
 </div>
 
-<!-- Imagem final no rodapé -->
 <div class="photo">
-  <img src="assets/images/imagem_faixa.png" alt="Final Illustration" style="width: 100%; border-radius: 12px;">
+  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
 </div>
 
 <!-- Imagem final no rodapé -->
-<div class="section" style="text-align: center; padding: 0;">
-  <img src="assets/images/test.jpg" alt="Final Illustration" style="width: 100%; border-radius: 12px;">
-</div>
+<div class="photo">
+  <img src="assets/images/imagem_faixa.png" alt="Final Illustration" style="width: 100%; border-radius: 12px;">
+</div
+
+  
