--- a/index.html
+++ b/index.html
@@ -172,13 +172,17 @@ title: Tiago Belintani
   </ul>
 </div>
 
-<div class="photo">
-  <img src="assets/images/IMG-20241113-WA0075.jpg" alt="Tiago Belintani">
-</div>
 
 <!-- Imagem final no rodapé -->
 <div class="photo">
   <img src="assets/images/imagem_faixa.png" alt="Final Illustration" style="width: 100%; border-radius: 12px;">
 </div
+
+
+
+
+  <div class="photo">
+  <img src="assets/images/tiago_foto.png" alt="Tiago Belintani">
+</div>
 
   
