--- a/index.html
+++ b/index.html
@@ -179,10 +179,8 @@ title: Tiago Belintani
 </div
 
 
-
-
   <div class="photo">
-  <img src="assets/images/tiago_foto.png" alt="Tiago Belintani">
+  <img src="assets/images/tiago_foto.PNG" alt="Tiago Belintani">
 </div>
 
   
