--- a/index.html
+++ b/index.html
@@ -46,29 +46,16 @@ title: Tiago Belintani
     color: #cccccc;
   }
 
-  .section {
+  .white-box,
+  .section,
+  .cv-link {
     background-color: #1a1a1a;
     padding: 25px;
     margin: 30px 0;
     border-radius: 12px;
     border: none;
-  }
-
-  .white-box {
-    background-color: #1a1a1a;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px 0;
-    border: none;
-  }
-
-  .cv-link {
-    background-color: #1a1a1a;
-    text-align: center;
-    padding: 30px;
-    margin: 50px 0;
-    border-radius: 12px;
-    border: none;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .cv-link a {
@@ -145,9 +132,8 @@ title: Tiago Belintani
     <li><a href="https://www.researchgate.net/profile/Tiago-Belintani" target="_blank">ResearchGate</a></li>
     <li><a href="https://orcid.org/0000-0001-9485-1145" target="_blank">ORCID</a></li>
     <li><a href="http://lattes.cnpq.br/8948388411348223" target="_blank">Lattes</a></li>
-   <li><a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ReserachID</a></li>
+    <li><a href="https://www.webofscience.com/wos/author/record/AAL-8293-2021" target="_blank">ResearcherID</a></li>
   </ul>
-</div>
 </div>
 
 <div class="cv-link">
@@ -172,14 +158,12 @@ title: Tiago Belintani
   </ul>
 </div>
 
-
 <!-- Imagem final no rodapé -->
-<div class="photo">
+<div class="section" style="padding: 0;">
   <img src="assets/images/imagem_faixa.png" alt="Final Illustration" style="width: 100%; border-radius: 12px;">
-</div
+</div>
 
-
-  <div class="photo">
+<div class="photo">
   <img src="assets/images/tiago_foto.PNG" alt="Tiago Belintani">
 </div>
 
