--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ title: Tiago Belintani
 </div>
 
 <div class="photo">
-  <img src="assets/images/tiago_foto.PNG" alt="Tiago Belintani">
+  <img src="assets/images/tiago_foto.jpg" alt="Tiago Belintani">
 </div>
 
   
