--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tiago Belintani
   body {
     font-family: 'IBM Plex Sans', sans-serif;
     color: #cccccc;
-    background: url('assets/images/vaii.jpg') repeat center center fixed;
+    background: url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') repeat center center fixed;
     background-size: cover;
     max-width: 960px;
     margin: 0 auto;
