--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@ title: Tiago Belintani
 
   body {
     font-family: 'IBM Plex Sans', sans-serif;
-    color: #e0e0e0;
-    background: linear-gradient(rgba(10, 10, 10, 0.65), rgba(10, 10, 10, 0.65)), url('assets/images/vinicius-henrique-photography-A7GwggrhXm4-unsplash.jpg') center center fixed;
-    background-size: cover;
+    color: #333333;
+    background: #f8f9fa;
     max-width: 960px;
     margin: 0 auto;
     padding: 30px;
@@ -18,19 +17,19 @@ title: Tiago Belintani
 
   h1, h2, h3 {
     text-align: center;
-    color: #ffffff;
+    color: #222222;
     font-family: 'Space Grotesk', sans-serif;
     letter-spacing: 0.5px;
-    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+    text-shadow: none;
   }
 
   h1 {
     font-size: 3em;
     margin-bottom: 0.2em;
     padding: 12px;
-    background-color: rgba(26, 26, 26, 0.85);
+    background-color: rgba(255, 255, 255, 0.95);
     border-radius: 14px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   h3 {
@@ -38,27 +37,27 @@ title: Tiago Belintani
     font-weight: 500;
     margin-top: 0;
     padding: 8px;
-    background-color: rgba(26, 26, 26, 0.75);
+    background-color: rgba(255, 255, 255, 0.85);
     border-radius: 10px;
   }
 
   p, li {
     font-size: 1.08em;
     line-height: 1.75em;
-    color: #dddddd;
+    color: #444444;
   }
 
   .white-box,
   .section,
   .cv-link {
-    background-color: rgba(26, 26, 26, 0.85);
+    background-color: rgba(255, 255, 255, 0.95);
     padding: 25px;
     margin: 30px 0;
     border-radius: 12px;
-    border: 1px solid rgba(255, 255, 255, 0.08);
+    border: 1px solid rgba(0, 0, 0, 0.08);
     width: 100%;
     box-sizing: border-box;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
   }
 
@@ -68,7 +67,7 @@ title: Tiago Belintani
 
   .cv-link a {
     font-size: 1.2em;
-    color: #d0f0ec;
+    color: #007b8a;
     text-decoration: none;
     font-weight: 600;
   }
@@ -88,17 +87,17 @@ title: Tiago Belintani
     width: 320px;
     border: none;
     border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   }
 
   a {
-    color: #8de6d1;
+    color: #007b8a;
     text-decoration: none;
     font-weight: 600;
   }
 
   a:hover {
-    color: #5cc6b3;
+    color: #005f6b;
     text-decoration: underline;
   }
 
@@ -114,17 +113,16 @@ title: Tiago Belintani
     width: 400px;
     flex-shrink: 0;
     border-radius: 12px;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.08);
   }
 
   .image-gallery img:hover {
     transform: scale(1.03);
-    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
   }
 </style>
-
 
 <!-- Galeria de imagens no topo -->
 <div class="image-gallery">
