--- a/index.html
+++ b/index.html
@@ -26,56 +26,20 @@ title: Tiago Belintani
   h1 {
     font-size: 3em;
     margin-bottom: 0.2em;
-    padding: 12px;
-    background-color: rgba(255, 255, 255, 0.95);
-    border-radius: 14px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 12px 0;
   }
 
   h3 {
     font-size: 1.6em;
     font-weight: 500;
     margin-top: 0;
-    padding: 8px;
-    background-color: rgba(255, 255, 255, 0.85);
-    border-radius: 10px;
+    padding: 8px 0;
   }
 
   p, li {
     font-size: 1.08em;
     line-height: 1.75em;
     color: #444444;
-  }
-
-  .white-box,
-  .section,
-  .cv-link {
-    background-color: rgba(255, 255, 255, 0.95);
-    padding: 25px;
-    margin: 30px 0;
-    border-radius: 12px;
-    border: 1px solid rgba(0, 0, 0, 0.08);
-    width: 100%;
-    box-sizing: border-box;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-  }
-
-  .section:hover, .white-box:hover {
-    transform: translateY(-4px);
-  }
-
-  .cv-link a {
-    font-size: 1.2em;
-    color: #007b8a;
-    text-decoration: none;
-    font-weight: 600;
-  }
-
-  .cv-link img {
-    width: 48px;
-    vertical-align: middle;
-    margin-right: 12px;
   }
 
   .photo {
@@ -122,6 +86,22 @@ title: Tiago Belintani
     transform: scale(1.03);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
   }
+
+  .section {
+    margin-bottom: 40px;
+  }
+
+  .cv-link img {
+    width: 48px;
+    vertical-align: middle;
+    margin-right: 12px;
+  }
+
+  .cv-link a {
+    font-size: 1.2em;
+    color: #007b8a;
+    font-weight: 600;
+  }
 </style>
 
 <!-- Galeria de imagens no topo -->
@@ -133,7 +113,7 @@ title: Tiago Belintani
 <h1>Tiago Belintani</h1>
 <h3>Researcher | Postdoctoral Fellow | Evolutionary Scientist – Brazil</h3>
 
-<p class="white-box" style="text-align: justify;">
+<p style="text-align: justify;">
   Hello, I'm Tiago Belintani, a postdoctoral researcher at UNESP.<br>
   I study evolution, phylogenomics, and systematics of <em>Triatominae</em> (vectors of Chagas disease) and <em>Theraphosidae</em> (tarantulas).<br>
   My background is in Animal Biology, with strong emphasis on bioinformatics, evolutionary biology, and morphometric analysis.
@@ -167,11 +147,12 @@ title: Tiago Belintani
   <p>GitHub: <a href="https://github.com/TiagoBelintani">github.com/TiagoBelintani</a></p>
 </div>
 
-<div class="cv-link">
+<div class="section cv-link">
   <a href="assets/images/CV_TiagoBelintani.pdf" target="_blank">
     <img src="assets/images/3846805.png" alt="CV icon">Access My CV
   </a>
 </div>
+
 
 
   
